--- a/src/hoc/Layout/Layout.module.scss
+++ b/src/hoc/Layout/Layout.module.scss
@@ -1,32 +1,33 @@
 .Layout {
-    font-family: "Nunito", sans-serif;
-    height: 100vh;
-    background: -webkit-linear-gradient(
-        130deg,
-        #94b0b7,
-        #7697a0,
-        #4a707a
-    ); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(
-        130deg,
-        #94b0b7,
-        #7697a0,
-        #4a707a
-    ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  font-family: "Nunito", sans-serif;
+  height: 100vh;
+  padding: 0 15px;
+  background: -webkit-linear-gradient(
+    130deg,
+    #94b0b7,
+    #7697a0,
+    #4a707a
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    130deg,
+    #94b0b7,
+    #7697a0,
+    #4a707a
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-    main {
-        flex-grow: 1;
-    }
+  main {
+    flex-grow: 1;
+  }
 }
 
 ::-webkit-scrollbar {
-    width: 12px;
-    background-color: #f9f9fd;
+  width: 12px;
+  background-color: #f9f9fd;
 }
 ::-webkit-scrollbar-thumb {
-    background-color: #929292;
+  background-color: #929292;
 }
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
-    background-color: #f9f9fd;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+  background-color: #f9f9fd;
 }
