--- a/src/components/AddUser/AddUser.module.scss
+++ b/src/components/AddUser/AddUser.module.scss
@@ -1,32 +1,39 @@
-.AddUser {
-  display: flex;
-  flex-direction: column;
+.backdrop {
   position: fixed;
-  bottom: 15px;
-  border: 2px solid #bebebe;
-  border-radius: 5px;
-  padding: 10px;
-  width: 100%;
-  max-width: 380px;
-  background: #506f77;
-  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4);
+  display: flex;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.7);
 
-  input {
-    margin-bottom: 10px;
-    padding: 6px 0 6px 9px;
+  .AddUser {
+    display: flex;
+    flex-direction: column;
+    bottom: 15px;
+    border: 2px solid #bebebe;
     border-radius: 5px;
-    background: #f0f0f0;
-  }
+    padding: 10px;
+    min-width: 380px;
+    margin: auto;
 
-  button {
-    padding: 6px 12px;
-    border-radius: 5px;
-    background: #007c21;
-    color: #fff;
-    opacity: 0.9;
+    input {
+      margin-bottom: 10px;
+      padding: 6px 0 6px 9px;
+      border-radius: 5px;
+      background: #f0f0f0;
+    }
 
-    &:hover {
-      opacity: 1;
+    button {
+      padding: 6px 12px;
+      border-radius: 5px;
+      background: #007c21;
+      color: #fff;
+      opacity: 0.9;
+
+      &:hover {
+        opacity: 1;
+      }
     }
   }
 }
