--- a/src/hoc/Layout/Layout.module.scss
+++ b/src/hoc/Layout/Layout.module.scss
@@ -2,18 +2,9 @@
   font-family: "Nunito", sans-serif;
   height: 100vh;
   padding: 0 15px;
-  background: -webkit-linear-gradient(
-    114deg,
-    #415b62,
-    #506f77,
-    #5b7f88
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    114deg,
-    #415b62,
-    #506f77,
-    #5b7f88
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-linear-gradient(114deg, #415b62, #506f77, #5b7f88);
+  background: linear-gradient(114deg, #415b62, #506f77, #5b7f88);
+  overflow: auto;
 
   main {
     flex-grow: 1;
@@ -24,9 +15,11 @@
   width: 12px;
   background-color: #f9f9fd;
 }
+
 ::-webkit-scrollbar-thumb {
   background-color: #929292;
 }
+
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
   background-color: #f9f9fd;
