--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,3 @@
-// ---------- Reset styles ---------- //
 * {
   padding: 0;
   margin: 0;
@@ -30,12 +29,12 @@ body {
   height: 100%;
   width: 100%;
   font-size: 100%;
-  font-family: "Nunito", sans-serif;
 }
 
 input,
 button,
-textarea {
+textarea,
+select {
   font-family: inherit;
 }
 
@@ -47,10 +46,6 @@ button {
   cursor: pointer;
 }
 
-button:disabled {
-  background: #0a0a0a;
-}
-
 button::-moz-focus-inner {
   padding: 0;
   border: 0;
@@ -59,6 +54,7 @@ button::-moz-focus-inner {
 a,
 a:visited {
   text-decoration: none;
+  color: inherit;
 }
 
 a:hover {
@@ -82,3 +78,35 @@ h6 {
   font-size: inherit;
   font-weight: inherit;
 }
+
+body {
+  font-family: "Nunito", sans-serif;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+  background-color: #f9f9fd;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #929292;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+  background-color: #f9f9fd;
+}
+
+.main-layout {
+  display: grid;
+  place-items: center;
+}
+
+.main-layout {
+  height: 100vh;
+  background: -webkit-linear-gradient(45deg, #040d2c, #462a8b, #c505d6);
+  background: linear-gradient(45deg, #040d2c, #462a8b, #c505d6);
+  padding: 25px;
+}
+
+/*# sourceMappingURL=style.css.map */
