--- a/src/scss/abstracts/variables.scss
+++ b/src/scss/abstracts/variables.scss
@@ -1,9 +1,13 @@
-$white: #ffffff;
 $lg-grey: #f0f0f0;
-$black: #000000;
 $md-black: rgba(0, 0, 0, 0.7);
 $blue: #2884f6;
 $green: rgb(161, 240, 69);
 $md-green: rgba(161, 240, 69, 0.7);
 $red: #ff7373;
 $md-red: rgba(240, 87, 108, 0.8);
+
+$black: #000000;
+$white: #ffffff;
+$primary: #802bb1;
+$dark: #2d283e;
+$light: #d1d7e0;
