--- a/src/components/AddUser/AddUser.module.scss
+++ b/src/components/AddUser/AddUser.module.scss
@@ -1,39 +1,42 @@
-.backdrop {
-  position: fixed;
-  display: flex;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.7);
-
-  .AddUser {
+.addUser {
+  .backdrop {
+    position: fixed;
     display: flex;
-    flex-direction: column;
-    bottom: 15px;
-    border: 2px solid #bebebe;
-    border-radius: 5px;
-    padding: 10px;
-    min-width: 380px;
-    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.7);
 
-    input {
-      margin-bottom: 10px;
-      padding: 6px 0 6px 9px;
+    .AddUserForm {
+      display: flex;
+      flex-direction: column;
+      bottom: 15px;
+      border: 2px solid #bebebe;
       border-radius: 5px;
-      background: #f0f0f0;
-    }
+      padding: 10px;
+      min-width: 380px;
+      margin: auto;
+      z-index: 10;
 
-    button {
-      padding: 6px 12px;
-      border-radius: 5px;
-      background: #007c21;
-      color: #fff;
-      opacity: 0.9;
-
-      &:hover {
-        opacity: 1;
+      input {
+        margin-bottom: 10px;
+        padding: 6px 0 6px 9px;
+        border-radius: 5px;
+        background: #f0f0f0;
       }
+
+      // button {
+      //   padding: 6px 12px;
+      //   border-radius: 5px;
+      //   background: #007c21;
+      //   color: #fff;
+      //   opacity: 0.9;
+
+      //   &:hover {
+      //     opacity: 1;
+      //   }
+      // }
     }
   }
 }
