--- a/src/scss/components/UI/buttons.scss
+++ b/src/scss/components/UI/buttons.scss
@@ -1,8 +1,8 @@
 .btn {
   padding: 10px 12px;
   font-size: 15px;
-  color: #fff;
-  transition: 0.1s ease-in;
+  color: $white;
+  transition: $ease-in;
 
   &:hover {
     background-color: $light;
@@ -15,11 +15,5 @@
 }
 
 .secondary-btn {
-  background-color: #be2f33;
-}
-
-.auth-btn {
-  font-size: 14px;
-  height: 40px;
-  background: #4a707a;
+  background-color: $secondary;
 }
