--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -2,6 +2,11 @@ body {
   font-family: "Nunito", sans-serif;
 }
 
+.elements-block {
+  @extend %flex-items-center;
+  gap: 8px;
+}
+
 ::-webkit-scrollbar {
   width: 12px;
   background-color: #f9f9fd;
