--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -1,5 +1,6 @@
-@import "UI/buttons";
+@import "UI";
 @import "auth-form";
 @import "users-form";
 @import "user-list";
 @import "user-item";
+@import "create-user";
