--- a/src/scss/components/users-form.scss
+++ b/src/scss/components/users-form.scss
@@ -3,4 +3,10 @@
   gap: 25px;
   min-width: 780px;
   color: $white;
+
+  &__empty {
+    text-align: center;
+    font-weight: bold;
+    font-size: 17px;
+  }
 }
