--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -1,10 +1,17 @@
 body {
   font-family: "Nunito", sans-serif;
+  //font-weight: 400;
 }
 
 .elements-block {
   @extend %flex-items-center;
   gap: 8px;
+}
+
+button:disabled {
+  background-color: $light;
+  opacity: 0.5;
+  cursor: auto;
 }
 
 ::-webkit-scrollbar {
