--- a/src/scss/components/UI/buttons.scss
+++ b/src/scss/components/UI/buttons.scss
@@ -4,7 +4,7 @@
   color: $white;
   transition: $ease-in;
 
-  &:hover {
+  &:enabled:hover {
     background-color: $light;
     color: $black;
   }
