--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,24 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500&display=swap");
+.create-user, .main-layout {
+  display: grid;
+  place-items: center;
+}
+
+.create-user__form, .user-list, .users-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.elements-block {
+  display: flex;
+  align-items: center;
+}
+
+.user-item {
+  display: flex;
+  justify-content: space-between;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -87,6 +108,12 @@ body {
   gap: 8px;
 }
 
+button:disabled {
+  background-color: #d1d7e0;
+  opacity: 0.5;
+  cursor: auto;
+}
+
 ::-webkit-scrollbar {
   width: 12px;
   background-color: #f9f9fd;
@@ -101,26 +128,6 @@ body {
   background-color: #f9f9fd;
 }
 
-.create-user, .main-layout {
-  display: grid;
-  place-items: center;
-}
-
-.create-user__form, .user-list, .users-form {
-  display: flex;
-  flex-direction: column;
-}
-
-.elements-block {
-  display: flex;
-  align-items: center;
-}
-
-.user-item {
-  display: flex;
-  justify-content: space-between;
-}
-
 .main-layout {
   height: 100vh;
   background-color: #2d283e;
@@ -133,7 +140,7 @@ body {
   color: #ffffff;
   transition: 0.1s ease-in;
 }
-.btn:hover {
+.btn:enabled:hover {
   background-color: #d1d7e0;
   color: #000000;
 }
@@ -180,6 +187,11 @@ body {
   min-width: 780px;
   color: #ffffff;
 }
+.users-form__empty {
+  text-align: center;
+  font-weight: bold;
+  font-size: 17px;
+}
 
 .user-list {
   gap: 9px;
@@ -194,6 +206,7 @@ body {
   font-size: 21px;
   margin-bottom: 4px;
   font-weight: bold;
+  letter-spacing: 1px;
 }
 .user-item:hover {
   transform: scale(1.04);
